--- a/about.html
+++ b/about.html
@@ -115,10 +115,10 @@
     <section id="facts" class="facts">
       <div class="container" data-aos="fade-up">
 
-        <div class="section-title">
+<!--         <div class="section-title">
           <h2>Facts</h2>
           <p>I’ve never been on an Airplane,I don't like tomatoes,and my favorite color is Red</p>
-        </div>
+        </div> -->
 
       
     </section><!-- End Facts Section -->
