--- a/about.html
+++ b/about.html
@@ -78,14 +78,14 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> December 2,2003</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong>(510)-934-0415</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> City : Oakland,CA</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> (510)-934-0415</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Oakland,CA</li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 16</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong>maicamommygmail.com</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> maicamommygmail.com</li>
                 </ul>
               </div>
             </div>
