--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="assets/img/Sunflower.jpg" class="img-fluid" alt="">
+            <img src="assets/img/jamaica.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             
