--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I'm Jamaica I live in Oakland, Ca and I go to Skyline Highschool. I like to cook and learn new thing and I want to travel.</p>
+          <p>I'm Jamaica Girtman I live in Oakland, Ca and I go to Skyline Highschool.I like to cook and learn new thing about technology. I want to travel to new places and learn and explore new things abouut the places I travel to.</p>
         </div>
 
         <div class="row">
@@ -90,7 +90,7 @@
               </div>
             </div>
             <p>
-              Skills are communication skills, strong work ethic, motivation, adaptability, and teamwork skills. I know how to use google suites, microsoft office, and web design.
+              Skills are communication skills, strong work ethic, motivation, adaptability, and teamwork skills. I know how to use google suites, microsoft office, and web design. I am open to taking a intership or job that could teach me a new skill that I could put to use in life.
             </p>
           </div>
         </div>
