--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
               </div>
             </div>
             <p>
-              Skills are communication skills, strong work ethic, motivation, adaptability, and teamwork skills. I know how to use google suites, microsoft office, and web design. I am open to taking a intership or job that could teach me a new skill that I could put to use in life.
+             I am open to taking a intership or job that could teach me a new skill that I could use in life. I want a intership so that I can experince and learn news about the work field and develop more skills to make a career out of. A job is a goal of mine it is a step into making a career for myself. I would like a job where I can cook or even learn new things about cooking.
             </p>
           </div>
         </div>
