--- a/services.html
+++ b/services.html
@@ -117,7 +117,7 @@
                 </svg>
                 <i class="bx bx-file"></i>
               </div>
-              <h4><a href="">GMAIL</a></h4>
+              <h4><a href="">Gmail</a></h4>
               <p>Gmail is a free email service developed by Google. Users can access Gmail on the web and using third-party programs that synchronize email content.</p>
             </div>
           </div>
