--- a/services.html
+++ b/services.html
@@ -118,7 +118,7 @@
                 <i class="bx bx-file"></i>
               </div>
               <h4><a href="">Google Email</a></h4>
-              <p>Gmail is a free email service developed by Google. Users can access Gmail on the web and using third-party programs that synchronize email content.</p>
+              <p>Google email is a free email service developed by Google. Users can access Gmail on the web and using third-party programs that synchronize email content.</p>
             </div>
           </div>
 
