--- a/about.html
+++ b/about.html
@@ -87,12 +87,12 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 16</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> maicamommygmail.com</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> maicamommy@gmail.com</li>
                 </ul>
               </div>
             </div>
             <p>
-             I am open to taking a intership or job that could teach me a new skill that I could use in life. I want a intership so that I can experince and learn news about the work field and develop more skills to make a career out of. A job is a goal of mine it is a step into making a career for myself. I would like a job where I can cook or even learn new things about cooking.
+             I am open to taking a intership or job that could teach me a new skill that I could use in life. I want a intership so that I can experince and learn news about the work field and develop more skills to make a career out of.
             </p>
           </div>
         </div>
