--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 16</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Email:yepremoteambassador@gmail.com</strong> </li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> yepremoteambassador@gmail.com</li>
                 </ul>
               </div>
             </div>
