--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
               <div class="email">
                 <i class="icofont-envelope"></i>
                 <h4>Email:</h4>
-                <p>maicamommy@gmail.com</p>
+                <p> yepremoteambassador@gmail.com</p>
               </div>
 
               <div class="phone">
