--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> December 2,2003</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> December 2nd</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> (510) 533-3447</li>
                   <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Oakland,CA</li>
                 </ul>
