--- a/services.html
+++ b/services.html
@@ -81,7 +81,7 @@
                 <i class="bx bx-file"></i>
               </div>
               <h4><a href="">Google Documents</a></h4>
-              <p>Google Docs is a real-time collaboration and document authoring tool. Multiple users can edit a document at the same time, while seeing each others' changes instantaneously.</p>
+              <p>Google Docs is a real-time collaboration and document authoring tool. Multiple users can edit a document at the same time while seeing each others' changes instantaneously.</p>
             </div>
           </div>
 
@@ -107,7 +107,7 @@
                 <i class="bx bx-slideshow"></i>
               </div>
               <h4><a href="">Zoom</a></h4>
-              <p> Zoom offers quality video, audio, and a wireless screen-sharing performance across differnet devices. Like ndows, Mac, Linux, iOS, Android, etc.</p>
+              <p> Zoom offers quality video, audio, and a wireless screen-sharing performance across different devices. Like windows, Mac, Linux, iOS, Android, etc.</p>
             </div>
           </div>
 
@@ -133,7 +133,7 @@
                 <i class="bx bx-slideshow"></i>
               </div>
               <h4><a href="">Google Hangouts</a></h4>
-              <p>Google Hangouts is a unified communications service that allows members to initiate and participate in text, voice or video chats, either one-on-one or in a group. Hangouts are built into Google+ and Gmail, and mobile Hangouts</p>
+              <p>Google Hangouts is a unified communications service that allows members to initiate and participate in text, voice, or video chats, either one-on-one or in a group. Hangouts are built into Google+ and Gmail, and mobile Hangouts.</p>
             </div>
           </div>
 
