--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I'm Jamaica Girtman I live in Oakland, Ca I go to Skyline High School, and, I'm a Remote Learning Ambassador at Youth Employment Partnership (YEP). I like to cook, learn new thing about technology, I want to travel to new places, explore and learn new things about the places I travel to.</p>
+          <p>I'm Jamaica Girtman I live in Oakland, Ca I go to Skyline High School, and I'm a Remote Learning Ambassador at Youth Employment Partnership (YEP). I like to cook, learn new thing about technology, I want to travel to new places, explore and learn new things about the places I travel to.</p>
         </div>
 
         <div class="row">
