--- a/about.html
+++ b/about.html
@@ -107,7 +107,7 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>Skills are communication skills, a strong work ethic, motivation, adaptability, and teamwork skills. I know how to use Google suites, Microsoft office, and, basic web design.
+          <p>Skills are communication skills, a strong work ethic, motivation, adaptability, and teamwork skills. I know how to use Google suites, Microsoft office, and basic web design.
             </p></p>
         </div>
 
