--- a/resume.html
+++ b/resume.html
@@ -68,7 +68,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Skills are communication skills, a strong work ethic, motivation, adaptability, and teamwork skills. I know how to use Google suites, Microsoft office, and, basic web design.</p>
+          <p>Skills are communication skills, a strong work ethic, motivation, adaptability, and teamwork skills. I know how to use Google suites, Microsoft office, and basic web design.</p>
         </div>
 
         <div class="row">
