--- a/services.html
+++ b/services.html
@@ -68,7 +68,7 @@
 
         <div class="section-title">
           <h2>Services</h2>
-          <p> Remote Learning Ambassador. Can help you with homework,computer skills, and, keeping online communication.</p>
+          <p> Remote Learning Ambassador. Can help you with homework,computer skills, and keeping online communication.</p>
         </div>
 
         <div class="row">
