--- a/portfolio.html
+++ b/portfolio.html
@@ -68,7 +68,7 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>This portfolio shows my business card, resume, and, a flyer.</p>
+          <p>This portfolio shows my business card, resume, and a flyer.</p>
         </div>
 
         <div class="row" data-aos="fade-up" data-aos-delay="100">
